--- a/public/assets/sidebar.css
+++ b/public/assets/sidebar.css
@@ -41,59 +41,8 @@
 /* 예은css 모음*/
 
 /* 
-#container {
-  width: 100%;
-}
-/* .container {
-  width: 100%;
-} */
 
-/* .logo-div {
-  min-width: 120px;
-  text-align: center;
-  width: 120px;
-}
-
-.contents-header {
-  height: 50px;
-  position: relative;
-}
-
-#contents-header-title,
-#contents-header-showinglist,
-#contents-header-groupadd { */
-/* position: absolute; */
-/* padding-left: 10px;
-  display: inline;
-}
-
-
-.fa-bars:before,
-.fa-users:before {
-  font-size: xx-large;
-  color: #3a3b45;
-}
-
-.contents-memo {
-}
-
-.contents {
-  display: inline-block;
-  min-width: 0;
-  width: 100%;
-  padding-left: 135px;
-  margin: 10px;
-  float: left;
-  background: transparent;
-}
-
-.footer {
-    min-width: 0;
-    width: 100%;
-    padding-left: 135px;
-    float: left;
-    bottom: 0px;
-  }
+/* 
 
 .sidebar {
     display: block;
