--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -17,3 +17,9 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.sidebar-contents_container {
+  display: flex;
+  flex-direction: row;
+  height: 87.3%;
+}
