--- a/public/assets/sidebar.css
+++ b/public/assets/sidebar.css
@@ -1,16 +1,17 @@
 /* sidebar*/
 
 .sidebar {
-  position: relative;
+  /* position: relative; */
   display: block;
   width: 11%;
-  height: 90%;
+  height: 100%;
+  min-width: 110px;
   background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
-  padding-top: 10px;
-  float: left;
+  /* padding-top: 10px; */
+  /* float: left; */
 }
 
-.sidebar li {
+/* .sidebar li {
   border-radius: 0 25px 25px 0;
   height: 50%;
   text-align: center;
@@ -21,7 +22,8 @@
 .sidebar li a {
   padding: 0.3rem 0;
   margin: 0.5rem 0;
-}
+  /* width: 80%; */
+/*}
 
 .sidebar li div {
   display: block;
@@ -36,7 +38,7 @@
 
 .sidebar li div a {
   display: block;
-}
+} */
 
 /* 예은css 모음*/
 
