--- a/public/assets/footer.css
+++ b/public/assets/footer.css
@@ -1,13 +1,10 @@
 /* footer*/
 .footer {
-  z-index: 2;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 89%;
-  right: 0px;
-  bottom: 8%;
-  float: right;
+  bottom: 0;
   height: auto;
 }
