--- a/public/assets/sidebar.css
+++ b/public/assets/sidebar.css
@@ -1,17 +1,15 @@
 /* sidebar*/
 
 .sidebar {
-  /* position: relative; */
   display: block;
   width: 11%;
   height: 100%;
   min-width: 110px;
   background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
-  /* padding-top: 10px; */
-  /* float: left; */
+  padding-top: 10px;
 }
 
-/* .sidebar li {
+.sidebar li {
   border-radius: 0 25px 25px 0;
   height: 50%;
   text-align: center;
@@ -23,7 +21,7 @@
   padding: 0.3rem 0;
   margin: 0.5rem 0;
   /* width: 80%; */
-/*}
+}
 
 .sidebar li div {
   display: block;
@@ -38,7 +36,7 @@
 
 .sidebar li div a {
   display: block;
-} */
+}
 
 /* 예은css 모음*/
 
